--- a/index.html
+++ b/index.html
@@ -69,8 +69,34 @@
             </div>
             <div class="landing-contant">
                 <div class="details">
-                    <i class="fa-solid fa-phone"></i>
+                    <!-- <i class="fa-solid fa-phone"></i> -->
+                    <!-- <div class="details"> -->
+                        <i class="fa-solid fa-phone"></i>
+                        <div>
+                            <span>000(123) 456-7890</span>
+                            <span>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Ducimus sunt exercitationem corporis.
+                            </span>
+                        </div>
+                    </div>
+                    <div>
+                        <span>123 Main STreet</span>
+                        <span>
+                            203 Fake St. Mountain View, San Fransisco, California
+                        </span>
+                    </div>
                 </div>
+                <div class="details">
+                    <i class="fa-solid fa-clock"></i>
+                    <div>
+                        <span>Open Monday-Friday </span>
+                        <span>
+                            Please Join Us, We are Available --> 8:00am - 9:00pm.
+                        </span>
+                    </div>
+                </div>
+                
                 
             </div>
         </section>
